# dish_dispatch_backend

./: .pdm-python  DishDispatch.paw  pyproject.toml
api/: main.py
api/common/: data.py  security.py
api/models/: customers.py  orders.py  restaurants.py  users.py
api/routers/: customers.py  orders.py  restaurants.py
scripts/: data-gen.json  insert_data.py  mkdb.py  mkfakedata.py  prep_static.py
