[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nam Thành Nguyễn", email = "tumble_todo_0e@icloud.com"},
]
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "faker>=24.11.0",
    "faker-food>=0.3.0",
    "websockets>=12.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
